force-app/main/default/objects/Position__mdt/Position__mdt.object-meta.xml
<CustomObject>
    <label>Position</label>
    <pluralLabel>Positions</pluralLabel>
</CustomObject>