force-app/main/default/objects/Position__mdt/fields/FieldMappedTo__c.field-meta.xml
<CustomField>
    <fullName>FieldMappedTo__c</fullName>
    <description>The object field this position shall be mapped to in the format (&lt;ObjectAPIName&gt;.&lt;FieldAPIName__c&gt;)</description>
    <label>Field Mapped To</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>