force-app/main/default/objects/Position__mdt/fields/IsRequired__c.field-meta.xml
<CustomField>
    <fullName>IsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will tell if a particular position is required on production key</description>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>