force-app/main/default/objects/Position__mdt/fields/PositionFrom__c.field-meta.xml
<CustomField>
    <fullName>PositionFrom__c</fullName>
    <description>The position in the production key where this parameter starts</description>
    <label>Position From</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>