force-app/main/default/objects/Position__mdt/fields/PositionNumber__c.field-meta.xml
<CustomField>
    <fullName>PositionNumber__c</fullName>
    <label>Position Number</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>