force-app/main/default/objects/Position__mdt/fields/PositionTo__c.field-meta.xml
<CustomField>
    <fullName>PositionTo__c</fullName>
    <description>The position in the production key where this parameter ends</description>
    <label>Position To</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>