force-app/main/default/objects/Position__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production Key</fullName>
            </value>
            <value>
                <fullName>Norms</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>